# CNN-MonoFusion

./: .gitignore  LICENSE  README.md
adenet_def/: __init__.py  adenet_netdef.py  network_astrous.py
adenet_run_server/: adenet_run_as_server.py
evaluate/: README.md  evaluate_sequence.py  evaluate_sequence.sh  evaluate_util.py  predict_sequences.py  predict_sequences.sh
pointcloud-fusion/: CMakeLists.txt
pointcloud-fusion/Examples/rgbd_monodepth/: DatasetConfigure.h  DepthPredictCommunicator.cc  DepthPredictCommunicator.h  KinectDataProvider.cpp  KinectDataProvider.h  dataset_configure.yaml  kinect_adenet_pred_viewpoint.yaml  rgbd_monodepth.cc  tum1_adenet_pred_viewpoint.yaml
pointcloud-fusion/src/dense_map/: DenseMap.cc  DenseMap.h  DenseMapDrawer.cc  DenseMapDrawer.h  DenseMapViewer.cc  DenseMapViewer.h  DepthPredictor.cc  DepthPredictor.h  KeyFrameQueue.cc  KeyFrameQueue.h  LabelClasses.h  OrbKeyFrame.h
